# fmnist-c

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  fmnist.c  fmnist.h
app/: CMakeLists.txt  main.c
app/f32_f32/: CMakeLists.txt  main.c
app/u8_u8/: CMakeLists.txt  main.c
